@@ -1961,10 +1961,14 @@ object to the panel.  This stylesheet will be called to determine both
 the glyph and the glyph options.  If both a stylesheet and direct
 options are provided, the latter take precedence.
 
-The B<-color_series> argument, if true, causes the track to ignore
-the -bgcolor setting and instead to assign glyphs a series of
-contrasting colors. This is usually used in combination with 
--bump=>'overlap' in order to create overlapping features.
+The B<-color_series> argument causes the track to ignore the -bgcolor
+setting and instead to assign glyphs a series of contrasting
+colors. This is usually used in combination with -bump=>'overlap' in
+order to create overlapping features. A true value activates the color
+series. You may adjust the default color series using the
+B<-color_cycle> option, which is either a reference to an array of
+Bio::Graphics color values, or a space-delimited string of color
+names/value.
 
 If successful, add_track() returns an Bio::Graphics::Glyph object.
 You can use this object to add additional features or to control the
